style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Inter", sans-serif;
}
/* Common Button*/
button {
    background-color: #3730f2;
    color: #fff;
    border: none;
    padding: 15px 35px;
    border-radius: 8px;
    font-size: 12px;
    font-weight: bold;
    cursor: pointer;
}

/*Navbar*/

.Navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    max-width: 1400px;
    margin: auto;
    padding: 15px 40px;
}

/* Logo */
.logo {
    display: flex;
    align-items: center;
    gap: 10px;
}

.logo_icon {
    background-color: #0a0c21;
    color: #2f1cbe;
    width: 28px;
    height: 28px;
    border-radius: 8px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 16px;
}

.logo h3 {
    font-size: 14px;
    letter-spacing: 0.5px;
}

/* Nav links */
.Navbar ul {
    display: flex;
    gap: 30px;
    list-style: none;
}

.Navbar ul li a {
    text-decoration: none;
    color: #14162b;
    font-size: 15px;
}

/* Navbar end */

/* Hero */

.hero {
    background-image: linear-gradient(
        to right, 
    rgba(0, 0, 0, 0.85),  /* Starts dark on the left */
    rgba(0, 0, 0, 0.01)
        ), url(./assets/banner.jpg);

    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    width: 100%;
    height: 100vh;

    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 40px 20px 60px;
}

.hero-text {
    display: grid;
    justify-items: center;
    padding-top: 80px;
}

.hero-text h1 {
    font-size: 70px;
    color: #fff;
    font-weight: 900;
    text-align: center;
}

.hero-text span {
    font-style: italic;
}

.hero-text p {
    font-size: 20px;
    color: #fff;
    max-width: 600px;
    text-align: center;
}

.hero button {
    padding: 20px 60px;
    font-size: 20px;
}

.hero-button {
    margin-top: auto;
    align-items: end;
}


/*Hero end */

/* speakers info*/

.meet-speakers {
    margin-top: 70px;
    justify-items: center;

}
.meet-speakers h2 {
    font-size: 56px;
    font-weight: 700;
}

.speakers {
    margin-top: 30px;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
    gap: 28px;
}

.speaker-grid {
    background-color: #ffffff;
    border-radius: 8px;
    border: 1px solid #e5e7eb; 
    overflow: hidden; 
}

.speaker-grid img {
    cursor: pointer;
    width: 100%;
    display: block;
    height: auto;
}

.speaker-info {
    padding: 20px;
    display: flex;
    flex-direction: column;
    gap: 6px;
}

.speaker-info a {
    text-decoration: none;
    color: rgba(55, 0, 255, 0.8);
    font-size: 12px;
    font-weight: bold;
    letter-spacing: 0.3px;
}

.speaker-info h3 {
    cursor: pointer;
    font-size: 20px;
}

.speaker-info p {
    font-size: 14px;

}

/* Speakers info end*/

/* Pricing cards*/

.pricing {
    justify-items: center;
    margin-top: 100px;
    padding: 10px;
    
}

.pricing-head {
    display: flex;
    flex-direction: column;
    justify-items: center;
    margin-bottom: 20px;
}

.pricing-head h2 {
    font-size: 48px;
    font-weight: 700;
    text-align: center;
}
.pricing-head p {
    font-size: 16px;
    font-weight: 400;
    text-align: center;
}

.pricing-plans {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 10px;
}

.pricing-plans-cards {
    background-color: #f4f8fc;
    border-radius: 8px;
    border: 1px solid #e5e7eb; 
    overflow: hidden; 
    padding: 20px;
}

.price-tier {
    font-size: 13px;
    font-weight: 600;
    letter-spacing: 0.32px;
    color: #888888FF;
}
.price {
    font-size: 44px;
    font-weight: 700;
    color: #0d1b2aFF;
}
.price-subtext {
    font-size: 13px;
    font-weight: 400;
    color: #888888FF;
}

.pricing-plans-cards.pro {
  background-color: #0d1b2aFF;
  border: 1px solid #1e293b;
  color: #ffffff;
}

.pro .price-tier {
    color: #93c5fdFF;
} 
.pro .price {
    color: #ffffff;
}

.card-divider {
    border: 0;
    border-top: 1px solid #e2e8f0;
    margin: 20px 0;
}

.pro .card-divider {
    border-top: 1px solid #1e293b;
}

.card-details {
    padding: 0 20px 20px;
}

.card-details ul {
    row-gap: 10px;
    display: flex;
    flex-direction: column;
}

ul li::marker {
    color: #2563ebFF;
}

.pro ul li::marker {
    color: #60a5faFF;
}

.btn-standard button {
    width: 100%;
    background-color: #ffff;
    color: #3730f2;
    border: 1.5px solid #3730f2;
}

.btn-pro button {
    width: 100%;
}

.btn-team button {
    width: 100%;
    background-color: #ffff;
    color: #3730f2;
    border: 1.5px solid #3730f2;
}

.btn-standard,
.btn-pro,
.btn-team {
    margin-top: auto;
    padding-top: 10px;
}

.why-attend {
    justify-items: center;
    margin-top: 100px;

}

.attend {
    margin-top: 40px;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(3, 1fr);
    gap: 28px;
}

.attend-grid {
    background-color: #ffffff;
    border-radius: 8px;
    border: 1px solid #e5e7eb; 
    overflow: hidden;
    padding: 30px;
}

.attend-grid h3 {
    font-size: 20px;
    padding: auto;
    margin-top: 25px;
    margin-bottom: 8px;
}
.attend-grid p {
    padding: auto;

}

.icons {
    background-color: #dfe0ea;
    color: #2f19d5;
    width: 28px;
    height: 28px;
    border-radius: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 16px;
    margin-bottom: 15px;
}

footer {
    background-color: #d3d8dd;
    padding: 50px 40px 30px;
    margin-top: 50px;
}
.logos {
    display: flex;
    justify-content: space-between;
}

.copyright-text {
    text-align: center;
}

.logo a {
    color: #0a0c21;
}

